--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -103,7 +103,7 @@
     width: 100vw;
     margin-left: calc(50% - 50vw);
     border-top: 1px solid var(--color-border, #e3e3e3);
-    margin-top: {{ section.settings.footer_margin_top | default: 32 }}px;
+    margin-top: 32px;
     background: var(--footer-bg, #1a1a1a);
   }
   .footer__container {
