--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -28,8 +28,6 @@
     
     {% # Mini Cart CSS %}
     {{ 'mini-cart.css' | asset_url | stylesheet_tag }}
-    {{ 'mini-cart.css' | asset_url | stylesheet_tag }}
-    {{ 'add-to-cart-block.css' | asset_url | stylesheet_tag }}
     
     {% # Cart Page CSS %}
     {% if template.name == 'cart' %}
@@ -73,15 +71,12 @@
 
     {% sections 'footer-group' %}
     
-    {% # Add to Cart JavaScript %}
-    {{ 'add-to-cart.js' | asset_url | script_tag }}
-    
     {% # Mini Cart JavaScript %}
-    {{ 'mini-cart.js' | asset_url | script_tag }}
+    <script src="{{ 'mini-cart.js' | asset_url }}" defer></script>
     
     {% # Cart Page JavaScript %}
     {% if template.name == 'cart' %}
-      {{ 'cart-page.js' | asset_url | script_tag }}
+      <script src="{{ 'cart-page.js' | asset_url }}" defer></script>
     {% endif %}
 
   </body>
