--- a/snippets/mini-cart.liquid
+++ b/snippets/mini-cart.liquid
@@ -46,7 +46,7 @@
           </svg>
           <h3>Tu carrito está vacío</h3>
           <p>Agrega algunos productos para comenzar</p>
-          <a href="/collections/all" class="mini-cart__empty-btn">Continuar comprando</a>
+          <a href="{{ routes.all_products_collection_url }}" class="mini-cart__empty-btn">Continuar comprando</a>
         </div>
         
         <!-- Cart Items Container (will be populated by JavaScript) -->
@@ -56,7 +56,7 @@
             <div class="mini-cart__item" data-item-key="{{ item.key }}">
               <div class="mini-cart__item-image">
                 {% if item.image %}
-                  <img src="{{ item.image | image_url: width: 80 }}" alt="{{ item.product.title | escape }}">
+                  <img src="{{ item.image | image_url: width: 80 }}" alt="{{ item.product.title | escape }}" width="80" height="80">
                 {% else %}
                   <div class="mini-cart__item-placeholder">{{ item.product.title | slice: 0, 2 | upcase }}</div>
                 {% endif %}
@@ -115,7 +115,7 @@
             <span class="mini-cart__subtotal-amount" data-mini-cart-subtotal>{{ cart.total_price | money }}</span>
           </div>
           <div class="mini-cart__actions">
-            <a href="/cart" class="mini-cart__view-cart-btn">Ver carrito</a>
+            <a href="{{ routes.cart_url }}" class="mini-cart__view-cart-btn">Ver carrito</a>
             <button class="mini-cart__checkout-btn" data-mini-cart-checkout>Finalizar compra</button>
           </div>
         </div>
